伤害测试service功能开发

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
             "Skill\\": "App/Work/Skill/",
             "Occupation\\": "App/Work/Occupation/",
             "Common\\": "App/Common/",
-            "Version\\": "App/Work/Version/"
+            "Version\\": "App/Work/Version/",
+            "Damage\\": "App/Work/Damage/"
         }
     }
 }
