--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "easyswoole/orm": "^1.4",
         "hyperf/database": "^2.2",
         "hyperf/paginator": "^2.2",
-        "ext-json" : "*"
+        "ext-json" : "*",
+        "wechatpay/wechatpay": "^1.4"
     },
     "autoload": {
         "psr-4": {
